fix: the display on small screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,10 @@ body {
     cursor: pointer;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   .wrap {
     max-width: 1366px;
     margin: 0 auto;
@@ -40,6 +44,7 @@ body {
 
   .nav__list {
       display: flex;
+      flex-wrap: wrap;
       list-style: none;
   }
 
